ubuntu-20-04.5/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wedding-app
  labels:
    name: wedding-app
